clusters/cluster0/kubernetes/apps/biggs/biggs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: biggs
  name: biggs
  namespace: biggs
spec:
  template:
    metadata:
      labels:
        app: biggs
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - image: szkud/biggslanding:latest
          imagePullPolicy: Always
          name: biggs
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
          - name: biggs-port
            containerPort: 8080
            protocol: TCP
          resources:
            requests:
              memory: 350Mi
              cpu: 10m
            limits:
              memory: 450Mi
              cpu: 350m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: biggs
