clusters/cluster0/kubernetes/apps/biggs/biggs/app/biggs-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: biggs-dog
  namespace: biggs
spec:
  hostnames:
  - biggs.biggs.dog
  parentRefs:
  - name: wildcard-biggs-dog
    namespace: networking
  rules:
  - backendRefs:
    - name: biggs-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
